internal/dataplane/testdata/golden/fallback-config-ingress/in.yaml
# In this test case we have two Ingresses and one Service. One of the Ingresses is broken and the other is valid, but
# associated with broken IngressClass.
# We expect empty config because of the broken IngressClass and Ingress.
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: broken-ingress
  namespace: foo-namespace
  uid: "6faea5d6-ce95-439e-b223-421a0a142e3f"
  annotations:
    test.konghq.com/broken: "true"
spec:
  ingressClassName: kong
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 80
            path: /broken
            pathType: Exact
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: valid-ingress
  namespace: foo-namespace
spec:
  ingressClassName: kong-broken
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: svc
                port:
                  number: 80
            path: /valid
            pathType: Exact
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: svc
  namespace: foo-namespace
spec:
  ports:
    - port: 80
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong-broken
  uid: "b4fee149-68fd-4cea-aa43-eec0968e8a53"
  annotations:
    test.konghq.com/broken: "true"
